--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~8.2.7",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "echarts": "^4.2.0-rc.2",
+    "ngx-echarts": "^4.1.0",
     "jquery": "^3.5.0",
     "popper.js": "^1.16.0",
     "primeicons": "^2.0.0",
@@ -38,6 +40,7 @@
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/echarts": "^4.1.3",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
