--- a/angular.json
+++ b/angular.json
@@ -29,15 +29,24 @@
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/admin-lte/plugins/fontawesome-free/css/all.min.css",
+              "./node_modules/admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css",
+              "./node_modules/admin-lte/docs_html/assets/css/adminlte.css",
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/nova-light/theme.css",
               "./node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.slim.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/chart.js/dist/Chart.js"
+              "./node_modules/admin-lte/plugins/jquery/jquery.js",
+              "./node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.js",
+              "./node_modules/admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.js",
+              "./node_modules/admin-lte/dist/js/adminlte.js",
+              "./node_modules/admin-lte/dist/js/demo.js",
+              "./node_modules/admin-lte/plugins/jquery-mousewheel/jquery.mousewheel.js",
+              "./node_modules/admin-lte/plugins/raphael/raphael.js",
+              "./node_modules/admin-lte/plugins/jquery-mapael/jquery.mapael.js",
+              "./node_modules/admin-lte/plugins/jquery-mapael/maps/usa_states.js",
+              "./node_modules/admin-lte/plugins/chart.js/Chart.js"
             ]
           },
           "configurations": {
