--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "admin-lte": "^3.0.5",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "echarts": "^4.2.0-rc.2",
-    "ngx-echarts": "^4.1.0",
     "jquery": "^3.5.0",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.3",
+    "ngx-echarts": "^4.1.0",
     "popper.js": "^1.16.0",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.5",
@@ -37,10 +40,10 @@
     "@angular/cli": "~8.3.5",
     "@angular/compiler-cli": "~8.2.7",
     "@angular/language-service": "~8.2.7",
-    "@types/node": "~8.9.4",
+    "@types/echarts": "^4.1.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/echarts": "^4.1.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -52,6 +55,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "^3.5.3"
   }
 }
